

option java_outer_classname="UnBlockActivityEventResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message UnBlockActivityEventResponse 
{
	optional string uniqueKey = 1;
	optional string serverIP = 2;
	optional int32 port = 3;
	
}